@@ -84,6 +84,7 @@ namespace dbarts {
   struct EndNodePrior {
     virtual double computeLogIntegratedLikelihood(const BARTFit& fit, std::size_t chainNum, const Node& node, const double* y, double residualVariance) const = 0;
     virtual double drawFromPosterior(ext_rng* rng, double ybar, double numEffectiveObservations, double residualVariance) const = 0;
+    virtual double drawFromPrior(ext_rng* rng) const = 0;
     virtual void setK(const BARTFit& fit, double k) = 0;
     virtual double getK(const BARTFit& fit) const = 0;
     
@@ -144,6 +145,7 @@ namespace dbarts {
     
     virtual double computeLogIntegratedLikelihood(const BARTFit& fit, std::size_t chainNum, const Node& node, const double* y, double residualVariance) const;
     virtual double drawFromPosterior(ext_rng* rng, double ybar, double numEffectiveObservations, double residualVariance) const;
+    virtual double drawFromPrior(ext_rng* rng) const;
     virtual void setK(const BARTFit& fit, double k);
     virtual double getK(const BARTFit& fit) const;
   };
