@@ -292,6 +292,7 @@ namespace {
     DEF_FUNC("dbarts_create", create, 3),
     DEF_FUNC("dbarts_run", run, 3),
     DEF_FUNC("dbarts_sampleTreesFromPrior", sampleTreesFromPrior, 1),
+    DEF_FUNC("dbarts_sampleNodeParametersFromPrior", sampleNodeParametersFromPrior, 1),
     DEF_FUNC("dbarts_printTrees", printTrees, 4),
     DEF_FUNC("dbarts_getTrees", getTrees, 4),
     DEF_FUNC("dbarts_predict", predict, 3),
@@ -390,6 +391,7 @@ namespace {
     DEF_FUNC("runSamplerForIterations", dbarts_runSamplerForIterations),
     DEF_FUNC("runSamplerWithResults", dbarts_runSamplerWithResults),
     DEF_FUNC("sampleTreesFromPrior", dbarts_sampleTreesFromPrior),
+    DEF_FUNC("sampleNodeParametersFromPrior", dbarts_sampleNodeParametersFromPrior),
     DEF_FUNC("setResponse", dbarts_setResponse),
     DEF_FUNC("setOffset", dbarts_setOffset),
     DEF_FUNC("setSigma", dbarts_setSigma),
